// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraggableSectionAnchors snapshots should not render when lenght is less than 2 1`] = `<DocumentFragment />`;

exports[`DraggableSectionAnchors snapshots should render DraggableSectionAnchors 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp DraggableSectionAnchor DraggableSectionAnchor--light DraggableSectionAnchor--draggable DraggableSectionAnchor--draggable--light"
    data-anchor-index="0"
    data-test-anchor="anchor-north"
  />
  <div
    class="css-1jnxvbp DraggableSectionAnchor DraggableSectionAnchor--light DraggableSectionAnchor--draggable DraggableSectionAnchor--draggable--light"
    data-anchor-index="0"
    data-test-anchor="anchor-south"
  />
</DocumentFragment>
`;

exports[`DraggableSectionAnchors snapshots should render when is middle 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp DraggableSectionAnchor DraggableSectionAnchor--light DraggableSectionAnchor--draggable DraggableSectionAnchor--draggable--light"
    data-anchor-index="1"
    data-test-anchor="anchor-north"
  />
  <div
    class="css-1jnxvbp DraggableSectionAnchor DraggableSectionAnchor--light DraggableSectionAnchor--draggable DraggableSectionAnchor--draggable--light"
    data-anchor-index="1"
    data-test-anchor="anchor-south"
  />
</DocumentFragment>
`;

exports[`DraggableSectionAnchors snapshots should render when is middle 2`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp DraggableSectionAnchor DraggableSectionAnchor--light DraggableSectionAnchor--draggable DraggableSectionAnchor--draggable--light"
    data-anchor-index="2"
    data-test-anchor="anchor-north"
  />
  <div
    class="css-1jnxvbp DraggableSectionAnchor DraggableSectionAnchor--light DraggableSectionAnchor--draggable DraggableSectionAnchor--draggable--light"
    data-anchor-index="2"
    data-test-anchor="anchor-south"
  />
</DocumentFragment>
`;
